# SynchroHumanoid

./: .gitignore  .gitmodules  README.md  pyproject.toml
projects/fr5_pytbrain/: README_RECORD.md  new_quest_fr5_teleop_full_6dof.py  record_config.yaml  record_fr5_quest_dataset.py  sdk_paths.py  upload_dataset.sh
projects/fr5_pytbrain/analyze_dataset/: analyze_action_type.py  check_dataset_joints.py
projects/fr5_pytbrain/test_control_fr5_to _quest/: new_quest_fr5_teleop_full_6dof.py  new_quest_fr5_teleop_only_pose.py  new_quest_fr5_teleop_x_rotation_only.py  new_quest_fr5_teleop_y_rotation_only.py  new_quest_fr5_teleop_z_rotation_only.py  quest_get_pose.py  quest_get_pose_hz.py  set_home_position.py  test_drag_mode.py  test_fr5_pose_control.py
projects/openarm/install/: local_setup.sh  setup.ps1  setup.sh
projects/openarm/src/openarm_controller/: CMakeLists.txt  package.xml
projects/openarm/src/openarm_controller/config/: openarm_left_arm_simulated_config.yaml
projects/openarm/src/openarm_controller/launch/: pose_control.launch.py
projects/openarm/src/openarm_controller/openarm_controller/: action_test.py
projects/openarm/src/openarm_controller/src/: moveit_servo_test.cpp
projects/openarm/src/openarm_servo/: CMakeLists.txt  package.xml
projects/openarm/src/openarm_servo/config/: openarm_left_simulated_config.yaml  openarm_right_simulated_config.yaml  ros2_controllers.yaml
projects/openarm/src/openarm_servo/launch/: servo_left.launch.py  servo_right.launch.py
projects/openarm/src/openarm_servo/openarm_servo/: keyboard_servo_left.py  keyboard_servo_right.py  servo_monitor.py
projects/openarm_controller/install/: setup.bash
ros_src/install/: local_setup.sh  setup.sh
ros_src/install/chomp_motion_planner/lib/: libchomp_motion_planner.so.2.5.9
ros_src/install/moveit_chomp_optimizer_adapter/lib/: libmoveit_chomp_optimizer_adapter.so.2.5.9
ros_src/install/moveit_core/lib/: libcollision_detector_bullet_plugin.so.2.5.9  libmoveit_butterworth_filter.so.2.5.9  libmoveit_collision_detection.so.2.5.9  libmoveit_collision_detection_bullet.so.2.5.9  libmoveit_collision_detection_fcl.so.2.5.9  libmoveit_collision_distance_field.so.2.5.9  libmoveit_constraint_samplers.so.2.5.9  libmoveit_distance_field.so.2.5.9  libmoveit_dynamics_solver.so.2.5.9  libmoveit_exceptions.so.2.5.9  libmoveit_kinematic_constraints.so.2.5.9  libmoveit_kinematics_metrics.so.2.5.9  libmoveit_planning_interface.so.2.5.9  libmoveit_planning_request_adapter.so.2.5.9  libmoveit_planning_scene.so.2.5.9  libmoveit_robot_model.so.2.5.9  libmoveit_robot_state.so.2.5.9  libmoveit_robot_trajectory.so.2.5.9  libmoveit_test_utils.so.2.5.9  libmoveit_trajectory_processing.so.2.5.9  libmoveit_transforms.so.2.5.9  libmoveit_utils.so.2.5.9
ros_src/install/moveit_hybrid_planning/lib/: libforward_trajectory_plugin.so.2.5.9  libmotion_planning_pipeline_plugin.so.2.5.9  libmoveit_global_planner_component.so.2.5.9  libmoveit_hybrid_planning_manager.so.2.5.9  libmoveit_local_planner_component.so.2.5.9  libreplan_invalidated_trajectory_plugin.so.2.5.9  libsimple_sampler_plugin.so.2.5.9  libsingle_plan_execution_plugin.so.2.5.9
src/openarm_ros_ws/install/: local_setup.sh  setup.sh  setup.zsh
src/openarm_ros_ws/log/: latest_build
(+260 files in other folders)
