<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openarm_servo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mango7460@naver.com">cananella</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>moveit_servo</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>controller_manager</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>
  <depend>joy</depend>
  <depend>openarm_bimanual_moveit_config</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
